Edit images path

--- a/parallax/parallax-mousemove.html
+++ b/parallax/parallax-mousemove.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Parallax on mousemove</title>
-		<link rel="stylesheet" href="../../reset.css" />
+		<link rel="stylesheet" href="../reset.css" />
 
 		<style>
 			.page {
@@ -22,7 +22,7 @@
 			}
 
 			.parallax__background {
-				background: url('../../img/konohagakure.jpg') top / cover no-repeat;
+				background: url('../img/konohagakure.jpg') top / cover no-repeat;
 
 				inset: -5%;
 				width: 110%;
@@ -33,7 +33,7 @@
 				width: 25%;
 			}
 			.parallax__naruto_child {
-				background: url('../../img/naruto-child.png') no-repeat;
+				background: url('../img/naruto-child.png') no-repeat;
 				background-size: contain;
 				height: 25%;
 				top: 35%;
@@ -41,7 +41,7 @@
 			}
 
 			.parallax__naruto_teen {
-				background: url('../../img/naruto-teen.png') no-repeat;
+				background: url('../img/naruto-teen.png') no-repeat;
 				background-size: contain;
 				height: 45%;
 				top: 20%;
